src/test/ui/borrowck/borrowck-match-binding-is-assignment.mir.stderr
error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/borrowck-match-binding-is-assignment.rs:17:13
   |
LL |         x => {
   |         -
   |         |
   |         first assignment to `x`
   |         help: make this binding mutable: `mut x`
LL |             x += 1;
   |             ^^^^^^ cannot assign twice to immutable variable

error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/borrowck-match-binding-is-assignment.rs:24:13
   |
LL |         E::Foo(x) => {
   |                -
   |                |
   |                first assignment to `x`
   |                help: make this binding mutable: `mut x`
LL |             x += 1;
   |             ^^^^^^ cannot assign twice to immutable variable

error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/borrowck-match-binding-is-assignment.rs:31:13
   |
LL |         S { bar: x } => {
   |                  -
   |                  |
   |                  first assignment to `x`
   |                  help: make this binding mutable: `mut x`
LL |             x += 1;
   |             ^^^^^^ cannot assign twice to immutable variable

error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/borrowck-match-binding-is-assignment.rs:38:13
   |
LL |         (x,) => {
   |          -
   |          |
   |          first assignment to `x`
   |          help: make this binding mutable: `mut x`
LL |             x += 1;
   |             ^^^^^^ cannot assign twice to immutable variable

error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/borrowck-match-binding-is-assignment.rs:45:13
   |
LL |         [x,_,_] => {
   |          -
   |          |
   |          first assignment to `x`
   |          help: make this binding mutable: `mut x`
LL |             x += 1;
   |             ^^^^^^ cannot assign twice to immutable variable

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0384`.
